2007-04-06 CTAF <>
	* colorwarper : bug with gmake corrected
	* README : updated

2007-04-05 CTAF <>
	* colorwarper : warn when application is not found on the system

2007-03-12 CTAF <>
	* emacs : remove a bug with c++ coloration
	* emacs : bug corrected: cursor disapeer on emacs21

2007-02-19 CTAF <>
	* ct-installconf : sanity check (check for available program)
	* ct-installconf : text interface by default no more choice
	* colorwarper : replace colormake, colorgmake, etc
	* colorwarper : if perl isnt installed just launch the command
	* sshft : use more if possible (its better than less on some system, for what we need)
	* less : changed option (removed clear whole screen), it work better with ct-installconf
	* grktools.sh : overwrite existing symlink
	* ct-installconf : no more diff error


2007-02-16 CTAF <>
	* ct-installconf, ct-profile : cleaner output
	* xbindkeys : removed
	* gdm, kdm : removed from install
	* alias : remove old file: alias.{gentoo,debian,freebsd}
	* colormake : less color
	* colorgrepr : used with grepr
	* shell : display ctafconf version when launching a shell
	* grepr : dont display unuseful info (svn, error)

2007-02-15 CTAF <>
	* env : globalenv become env, added env.epita
	* emacs : removed emacs.mine, added emacs-pre.mine emacs-post.mine
	* ct-installconf, ct-profile : no more ctafconf_interface, use only console
	* emacs : little tweak to the color scheme
	* emacs : better CtafConf menu

2007-02-14 CTAF <>
	* ct-profile : only two config possible: normal/epita

2007-02-13 CTAF <>
	* ct-profile : remove one bug with wallpaper
	* emacs : tab = 8 space
	* shell : alias on ls removed
	* globalenv : EDITOR/VISUAL = emacs by default
	* emacs : remove std.el : correct the backspace problem
	* emacs : correct a bug with ido
	* zsh : white is now really white, not grey
	* xsession : remove some bug, always default to a terminal
	* zsh : same color everywhere, color are brighter at epita :-)

2007-02-12 CTAF <>
	* xsession : wors at epita