@@ -1,3 +1,6 @@
+2007-04-21 CTAF <>
+	* colorgaim.pl : color gaim log
+
 2007-04-06 CTAF <>
 	* colorwarper : bug with gmake corrected
 	* README : updated
